# server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yaml
.github/workflows/: docker.yml
aquarius/: common.py  database.py  main.py
aquarius/classes/: generic_responses.py  onboarding_link.py  tokens.py  user.py
aquarius/routers/: hero.py  onboarding.py  test.py  usermgmt.py
cartero/: 01_post_tx.cartero  02_get_tx.cartero
cartero/aqr/: 01_aqr_start.cartero  02_aqr_poll.cartero
cartero/aqr_mobile/: 01_identify.cartero
cartero/hero/: 01_GET_heroes.cartero  02_POST_hero.cartero  03_DELETE_hero.cartero
cartero/onboarding/: 01_create.cartero  01_init.cartero  02_init.cartero  02_register_user.cartero  03_finish_registration.cartero
cartero/usermgmt/: 01_onboard_user.cartero  02_register_user.cartero
hurl/: onboard_first_user.hurl  user_onboarding.hurl
quorra/: classes.py  config.py  database.py  keys.py  launcher.py  main.py  utils.py  vk_helpers.py
quorra/fe/: index.html  style.css  transitions.js
quorra/fe/auth/: auth.js  index.html
quorra/fe/auth/js/: script.js
quorra/fe/error/: index.html
quorra/fe/js/: script.js
quorra/fe/onboard/: index.html  missing_link.html  onboarding.js
quorra/routers/: lnurlauth.py  login.py  login_aqr.py  mobile.py  oidc.py  onboarding.py  tx.py
