[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = 'quorra'
dynamic = ["version"]
description = 'Quorra server'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
    {name = 'Kateřina Medvědová', email = 'k8ie@mcld.eu'},
]
dependencies = [
    "PyYAML",
    "fastapi",
    "valkey",
    "sqlmodel",
    "psycopg2",
    "qrcode",
    "uvicorn",
    "cryptography",
    "pillow",
    "python-multipart",
    "deepmerge",
    "python-jose",
    "bech32 @ git+https://github.com/Quorra-Auth/bech32.git"
]

[tool.setuptools]
packages = ["quorra", "quorra.routers"]

[tool.setuptools.package-data]
"quorra" = ["fe/**"]

[tool.setuptools.dynamic]
version = {attr = "quorra.__version__"}

[project.scripts]
quorra-server = "quorra.launcher:launch"
